# datamapx

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  pyproject.toml
docs/: agent-workflow.md  cli-spec.md  concept.md  config-spec.md  core-engine-readiness.md  developer-checklist.md  error-policy.md  excel-design-spec.md  pm-checklist.md  qa-checklist.md  release-checklist.md  roadmap.md
docs/templates/: data_migration_design_template_v2.xlsx
examples/01_basic_mapping/: README.ja.md  README.md  migration.yml
examples/02_lookup/: README.ja.md  README.md  migration.yml
examples/03_validation_errors/: README.ja.md  README.md  migration.yml
examples/04_japanese_csv/: README.ja.md  README.md  migration.yml
examples/05_merge_wizard/: README.ja.md  README.md  merge.yml
examples/06_migration_wizard/: README.ja.md  README.md  migration.yml
examples/07_practical_migration/: README.ja.md  README.md  migration.yml
examples/08_excel_design/: README.ja.md  README.md  datamapx_design_template.xlsx  generate_template.py
scripts/: build_migration_design_template.py
tests/: test_aggregate.py  test_cli.py  test_conditions.py  test_config.py  test_consolidate.py  test_csv_io.py  test_error_policy.py  test_excel_design.py  test_excel_design_template.py  test_filters.py  test_generate_config.py  test_mapping.py  test_match.py  test_merge.py  test_merge_wizard.py  test_migration_wizard.py  test_naming.py  test_preflight.py  test_reports.py  test_row_executor.py  test_run.py  test_run_all.py  test_runner.py  test_union.py  test_unpivot.py  test_validation.py
(+248 files in other folders)
