[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datamapx"
version = "0.3.1"
description = "YAML-driven CSV data migration, transformation, and validation CLI."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "Katsuyuki Hori" }
]
dependencies = [
  "pandas",
  "pydantic>=2",
  "typer",
  "PyYAML",
  "simpleeval",
  "python-dateutil",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "types-PyYAML",
]

[project.scripts]
datamapx = "datamapx.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/datamapx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
